<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Blue-Fi</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="please_pair">You might want to pair with some other device.</string>
    <string name="bluetooth_logo">Bluetooth</string>
    <string name="wifi_logo">Wi-Fi</string>
    <string name="back_button_conntent_description">Go back!</string>
    <string name="pair_with_bluetooth">Pair using Bluetooth</string>
    <string name="pair_with_wifi">Pair using Wi-Fi</string>
    <string name="title_activity_bluetooth_pair">Pair using Bluetooth</string>
    <string name="title_activity_wifi_pair">Pair using Wi-Fi</string>
    <string name="bluetooth_not_supported">Device does not support Bluetooth.</string>
    <string name="bluetooth_supported">Bluetooth is supported. Yay!</string>
    <string name="wifi_not_supported">Device does not support WiFi.</string>
    <string name="scan_devices">Scan Devices</string>
    <string name="logoContentDescription">Logo</string>
    <string name="none_paired">No device is paired.</string>
    <string name="none_found">No device was found.</string>
    <string name="title_activity_new_devices">NewDevices</string>
    <string name="discovery">Discovering new devices...</string>
    <string name="wifi_peer_list_changed">The peer list has changed!  We should probably do something about that.</string>
    <string name="wifi_connection_state_changed">Connection state changed!  We should probably do something about that.</string>
    <string name="wifi_this_device_changed">This device changed... Device fragment...</string>
    <string name="wifi_p2p_enabled">WiFi P2P is enabled.</string>
    <string name="wifi_p2p_disabled">WiFi P2P is disabled.</string>
    <string name="send_a_message">Messaging</string>
    <string name="give_a_call">Call</string>
    <string name="send_a_file">File Sharing</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_call">CallActivity</string>
    <string name="title_activity_file_share">FileShareActivity</string>
    <string name="error">ERROR: MESSAGE NOT AVAILABLE</string>
    <string name="discovery_finished">Bluetooth discovery has finished.</string>
    <string name="title_activity_device">Device</string>
    <string name="avatar">Avatar</string>
    <string name="yes">Yes button</string>
    <string name="no">No button</string>
    <string name="calling_or_answer">Calling or Answer</string>
    <string name="call_id">Call ID</string>
    <string name="browse">Browse...</string>
    <string name="save">Save</string>
    <string name="send_file">Send file</string>
    <string name="title_connected_to">Connected to</string>
    <string name="Get_File_Name_From_SDCard">Get File Name From SDCard</string>

    <!-- BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_not_connected">not connected</string>

    <!-- DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect device!</string>
    <string name="discoverable">Make discoverable!</string>
    <string name="title_activity_place_chooser">PlaceChooser</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
