<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity = "center"
    tools:context=".MainActivity" >

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/messaging"
        android:text="@string/send_a_message"
        android:gravity="center"
        android:clickable="true"
        android:textColor="#469"
        android:textSize="20sp"
        android:onClick="goToMessageActivity" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/phone"
        android:text="@string/give_a_call"
        android:gravity="center"
        android:clickable="true"
        android:textColor="#469"
        android:textSize="20sp"
        android:onClick="goToCallActivity" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/folder"
        android:text="@string/send_a_file"
        android:gravity="center"
        android:clickable="true"
        android:textColor="#469"
        android:textSize="20sp"
        android:onClick="goToFileShareActivity" />

</LinearLayout>
